@startuml
"Full class diagram (unificado)"
skinparam classAttributeIconSize 0

package "GameplayAdaptado" {
  package "Contratos" {
    interface ICompositionRoot
    interface IGameObjectFactory
    interface IExplosionFactory
    interface IParticulaFactory
    interface IGranadaFactory
    interface IAudioService
    interface IEntidad
  }

  package "Implementaciones" {
    class CompositionRoot
    class DefaultGameObjectFactory
    class DefaultExplosionFactory
    class DefaultParticulaFactory
    class DefaultGranadaFactory
    class AudioService_Mono
    class SimpleAudioService
    class CoroutineRunner
    abstract class EntidadBase
    class PersonajeRefactor
    class ZombiesRefactor
    class GranadaRefactor
    class ValidateCodigo
    class GameFactoryProvider
    class infoPartidaGuardada
  }
}

' Relationships and composition
IGameObjectFactory <|.. DefaultGameObjectFactory
IExplosionFactory <|.. DefaultExplosionFactory
IParticulaFactory <|.. DefaultParticulaFactory
IGranadaFactory <|.. DefaultGranadaFactory
IAudioService <|.. AudioService_Mono
IAudioService <|.. SimpleAudioService
ICompositionRoot <|.. CompositionRoot
IEntidad <|.. EntidadBase
EntidadBase <|-- PersonajeRefactor
EntidadBase <|-- ZombiesRefactor

CompositionRoot *-- DefaultGameObjectFactory
CompositionRoot o-- AudioService_Mono
CompositionRoot o-- SimpleAudioService
CompositionRoot ..> GameFactoryProvider

PersonajeRefactor ..> IGameObjectFactory
PersonajeRefactor ..> IAudioService
PersonajeRefactor ..> infoPartidaGuardada
ZombiesRefactor ..> IGameObjectFactory
GranadaRefactor ..> IExplosionFactory

ValidateCodigo --> CompositionRoot

@enduml